# ColabDesign

./: pyproject.toml  setup.py
af/: design.ipynb
af/examples/: RSO.ipynb  af_pseudo_diffusion.ipynb  af_pseudo_diffusion_dgram.ipynb  af_pseudo_diffusion_recycle.ipynb  af_relax_design.ipynb  af_single_sequential.ipynb  afdesign_hotspot_test.ipynb  disulfide_design.ipynb  hallucination.ipynb  hallucination_custom_loss.ipynb  partial_hallucination_rewire.ipynb  peptide_binder_design.ipynb  use_esm_1b_bias.ipynb
colabdesign/af/: design.py  inputs.py  loss.py  model.py  prep.py  utils.py
colabdesign/af/alphafold/common/: confidence.py  protein.py
colabdesign/af/alphafold/data/: pipeline.py  pipeline_multimer.py  prep_inputs.py
colabdesign/af/alphafold/model/: all_atom.py  all_atom_multimer.py  config.py  data.py  folding.py  folding_multimer.py  (+5 more)
colabdesign/af/contrib/: crop.py
colabdesign/esm_msa/: axial_attention.py  data.py  model.py  modules.py  pretrained.py
colabdesign/mpnn/: model.py  modules.py  sample.py  score.py  utils.py
colabdesign/mpnn/legacy/: example.ipynb  modules.py  sample.py  wrapper.py
colabdesign/rf/: designability_test.py  utils.py
colabdesign/seq/: kmeans.py  learn_msa.py  mrf.py  utils.py
colabdesign/shared/: model.py  plot.py  protein.py  utils.py
colabdesign/tr/: model.py  trrosetta.py
colabdesign/tr/legacy/: model.py
esm_msa/: example.ipynb
mpnn/examples/: afdesign_and_proteinmpnn_bias.ipynb  proteinmpnn_in_jax.ipynb
rf/examples/: diffusion.ipynb  diffusion_foldcond.ipynb  diffusion_ori.ipynb
tr/: design.ipynb
(+4 files in other folders)
